; ModuleID = '/home/carl/AnghaBench/i3/libi3/extr_ipc_send_message.c_ipc_send_message.c'
source_filename = "/home/carl/AnghaBench/i3/libi3/extr_ipc_send_message.c_ipc_send_message.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ipc_send_message(i32 %0, i32 %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca %struct.TYPE_2__, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32, i32* %7, align 4
  store i32 %12, i32* %11, align 4
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 1
  %14 = load i32, i32* %8, align 4
  store i32 %14, i32* %13, align 4
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 2
  store i32 105, i32* %15, align 4
  %16 = load i32, i32* %6, align 4
  %17 = bitcast %struct.TYPE_2__* %10 to i8*
  %18 = call i32 @writeall(i32 %16, i8* %17, i32 12)
  %19 = icmp eq i32 %18, -1
  br i1 %19, label %20, label %21

20:                                               ; preds = %4
  store i32 -1, i32* %5, align 4
  br label %29

21:                                               ; preds = %4
  %22 = load i32, i32* %6, align 4
  %23 = load i8*, i8** %9, align 8
  %24 = load i32, i32* %7, align 4
  %25 = call i32 @writeall(i32 %22, i8* %23, i32 %24)
  %26 = icmp eq i32 %25, -1
  br i1 %26, label %27, label %28

27:                                               ; preds = %21
  store i32 -1, i32* %5, align 4
  br label %29

28:                                               ; preds = %21
  store i32 0, i32* %5, align 4
  br label %29

29:                                               ; preds = %28, %27, %20
  %30 = load i32, i32* %5, align 4
  ret i32 %30
}

declare dso_local i32 @writeall(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
